<resources>

    <string name="app_name">Character Grouping</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">キャラグル</string>
    <string name="title_edit_activity">Edit</string>
    <string name="menu_sort">SORT</string>
    <string name="menu_edit">EDIT</string>
    <string name="menu_add_user">ADD USER</string>
    <string name="menu_add_group">ADD GROUP</string>
    <string name="menu_add">ADD</string>
    <string name="menu_size">SIZE</string>
    <string name="menu_phone">PHONE</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_icon">ICON</string>
    <string name="menu_disconnect">DISCONNECT</string>
    <string name="menu_shuffle_icons">ICON SHUFFLE</string>

	<string name="menu_send_mail">SEND MAIL</string>
	<string name="sort">SORT</string>
    <string name="menu_all_select">ALL SELECTION</string>

</resources>
