<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_phone"
        android:icon="@drawable/ic_menu_phone"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_phone"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_menu_sort"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_sort"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_menu_edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_menu_user_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_add"/>

</menu>