<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_add"
        android:showAsAction="never|withText"
        android:title="@string/menu_add"/>
    
    <item
        android:id="@+id/menu_shuffle_icons"
        android:showAsAction="never"
        android:title="@string/menu_shuffle_icons"/>

    
    <item
        android:id="@+id/menu_all_select"
        android:showAsAction="withText"
        android:title="@string/menu_all_select"/>
    
    <item
        android:id="@+id/menu_all_clear"
        android:showAsAction="withText"
        android:title="@string/menu_all_clear"/>

    <item
        android:id="@+id/menu_disconnect"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_disconnect"/>
</menu>